@@ -2,6 +2,7 @@
   * Use ConcatenateString() for multi-block GIF comments.
   * Caption no longer chops off text (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21558).
+  * Support LUV colorspace.
 
 2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-7, SVN revision 8766.
